@@ -9,6 +9,7 @@ MOD_POPULAR_HITS="Hits"
 MOD_POPULAR_ITEMS="Popular Items"
 MOD_POPULAR_NO_MATCHING_RESULTS="No Matching Results"
 MOD_POPULAR_XML_DESCRIPTION="This Module shows a list of the most popular published Articles that are still current. Some that are shown may have expired even though they are the most recent."
+POPULAR ITEMS="Popular Articles"
 
 ; Params
 MOD_POPULAR_FIELD_AUTHORS_LABEL="Authors"
