@@ -4,17 +4,15 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-ADD_NEW_ARTICLE="Add New Article"
-CATEGORY_MANAGER="Category Manager"
-ARTICLE_MANAGER="Article Manager"
-EXTENSION_MANAGER="Extension Manager"
-FRONTPAGE_MANAGER="Front Page Manager"
-LANGUAGE_MANAGER="Language Manager"
-MEDIA_MANAGER="Media Manager"
-MENU_MANAGER="Menu Manager"
-MOD_QUICKICON="mod_quickicon"
-MODULE_MANAGER="Module Manager"
-QUICK_ICONS="Quick Icons"
-THIS_MODULE_SHOWS_QUICK_ICONS_THAT_ARE_VISIBLE_ON_THE_ADMIN_AREA_HOME_PAGE="This Module shows Quick Icons that are visible on the Control Panel."
-USER_MANAGER="User Manager"
-
+MOD_QUICKICON_ADD_NEW_ARTICLE="Add New Article"
+MOD_QUICKICON_ARTICLE_MANAGER="Article Manager"
+MOD_QUICKICON_CATEGORY_MANAGER="Category Manager"
+MOD_QUICKICON_EXTENSION_MANAGER="Extension Manager"
+MOD_QUICKICON_FRONTPAGE_MANAGER="Front Page Manager"
+MOD_QUICKICON_LANGUAGE_MANAGER="Language Manager"
+MOD_QUICKICON_MEDIA_MANAGER="Media Manager"
+MOD_QUICKICON_MENU_MANAGER="Menu Manager"
+MOD_QUICKICON_MODULE_MANAGER="Module Manager"
+MOD_QUICKICON_USER_MANAGER="User Manager"
+MOD_QUICKICON_XML_DESCRIPTION="This module shows Quick Icons that are visible on the Control Panel (admin area home page)"
+QUICK ICONS="Quick Icons"
